kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision1.sem

struct Foo {
  a: Integer
}

struct Foo {
  b: Integer
}
